--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<title>Namit's - Portfolio Website 🧑‍💻</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
@@ -54,7 +55,7 @@
 			</div>
 		</div>
 	</nav>
-	<section id="home-section" class="hero">
+	<section id="home-section" class="hero table-responsive">
 		<div class="home-slider  owl-carousel">
 			<div class="slider-item ">
 				<div class="overlay"></div>
@@ -85,7 +86,7 @@
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
 						<div class="one-third js-fullheight order-md-last img"
-							style="background-image:url(images/bg_2.png);">
+							style="background-image:url(images/bg_1.png);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex align-items-center ftco-animate"
@@ -109,7 +110,7 @@
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/bg_3.png);">
+							style="background-image:url(images/bg_2.png);">
 						</div>
 					</div>
 				</div>
@@ -638,7 +639,7 @@
 								required></textarea>
 						</div>
 						<div class="form-group">
-							<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+							<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">&nbsp;
 							<input type="reset" value="Reset" class="btn btn-primary py-3 px-5">
 						</div>
 					</form>
