touch issue fix

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Namit's - Portfolio Website 🧑‍💻</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 	</nav>
-	<section id="home-section" class="hero table-responsive">
+	<section id="home-section" class="hero">
 		<div class="home-slider  owl-carousel">
 			<div class="slider-item ">
 				<div class="overlay"></div>
@@ -118,7 +118,7 @@
 					<div class="row justify-content-start pb-3">
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
-							<h2 class="mb-4">About Me</h2>
+							<h2 class="mb-4 mt-4">About Me</h2>
 							<p>I'm Namit Naik, a seasoned Big Data and AWS professional with a proven track record of
 								delivering complex data solutions to meet business needs. My expertise in these
 								technologies has allowed me to help organizations unlock the full potential of their
