--- a/index.html
+++ b/index.html
@@ -119,21 +119,17 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4 mt-4">About Me</h2>
-							<p>I'm Namit Naik, a seasoned Big Data and AWS professional with a proven track record of
-								delivering complex data solutions to meet business needs. My expertise in these
-								technologies has allowed me to help organizations unlock the full potential of their
-								data, leading to improved decision making and business outcomes.
+							<p>
+								I'm Namit Naik, a Data Engineer specializing in real-time and batch data processing frameworks, with extensive expertise in designing and optimizing data-intensive applications. My technical foundation is rooted in Big Data and AWS technologies, where I have developed and managed sophisticated solutions that streamline operations and enhance decision-making capabilities.
 								<br>
 								<br>
-								With extensive experience in cloud computing, I have designed and implemented AWS-based
-								Big Data solutions using services such as S3, EMR, EC2, Lambda, Step-Function, Glue &
-								Redshift. I have a deep understanding of programming languages such as Python and SQL,
-								as well as Big Data processing frameworks like Apache Spark and Apache Hive.
+								Skilled in Python and SQL, I have comprehensive experience with AWS services such as DMS, MSK, MWAA, S3, EMR, EC2, Lambda, Step Function, Glue & Redshift. I am also proficient with advanced data processing and orchestration technologies like Apache Spark, Apache Flink, Apache Hudi, Apache Kafka, and Apache Airflow, which empower me to build scalable, efficient data pipelines and real-time ETL systems.
 								<br>
 								<br>
-								I am dedicated to staying up-to-date with the latest industry advancements and expanding
-								my skillset. I possess excellent problem-solving skills, effective communication
-								abilities, and a strong team mentality.
+								With a strong emphasis on continuous improvement and innovation, I am adept at leveraging real-time data streaming and state management to improve system responsiveness and data accuracy. My approach always includes automating workflows to reduce manual intervention, increase process efficiency, and ensure data integrity across complex deployments.
+								<br>
+								<br>
+								As a committed lifelong learner and problem solver, I thrive in environments that challenge me to evolve and adapt to the ever-changing landscape of technology.
 							</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Namit Naik</span></li>
@@ -141,7 +137,7 @@
 								<li class="d-flex"><span>Address:</span> <span>Mumbai MH, India</span></li>
 								<li class="d-flex"><span>Pin code:</span> <span>421201</span></li>
 								<li class="d-flex"><span>Email:</span> <span>namitnaik1999@gmail.com</span></li>
-								<li class="d-flex"><span>Phone: </span> <span>+91-7506099306</span></li>
+								<li class="d-flex"><span>Phone: </span> <span>+91 7506099306</span></li>
 							</ul>
 						</div>
 					</div>
@@ -167,36 +163,12 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2022-Present</span>
-						<h2>Data Engineer</h2>
-						<span class="position">LTIMindtree</span>
-						<p class="mt-4">Made significant contributions to a successful Proof of Concept (POC) that
-							involved transitioning ETL framework from AWS EMR and Informatica to AWS Glue. My roles
-							included setting up the AWS Glue environment, designing an end-to-end job pipeline,
-							addressing data challenges, and developing CI/CD code. Also provided training,
-							collaborated on test automation, and played a key role in converting test suites from Pandas
-							to PySpark. Additionally, helped to implement a unified HTML Test Automation report and
-							concluded the POC by
-							migrating Test-Automation Suite to an AWS EMR cluster.</p>
+						<span class="date">2024-Present</span>
+						<h2>Product Engineer I - Big Data</h2>
+						<span class="position">Experian</span>
+						<p class="mt-4">Significant advancements in data processing and operational efficiency were achieved through various projects. A PySpark-based
+							dashboard was developed for real-time monitoring of EMR step executions, alongside a Python CLI wrapper on EC2 that automated business flows, minimizing manual interventions. Improvements in ETL data loading and vulnerability resolutions contributed to enhanced system reliability. Leading a real-time ETL proof of concept, the project won the Best Tech Idea at the EMAP Hackathon FY2025 Q3. Contributions also led to winning the Experian Role Model Award in August 2024. Additionally, PySpark training sessions were conducted, boosting the analytics team's efficiency and fostering strong stakeholder relationships for successful project outcomes.</p>
 					</div>
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2021</span>
-						<h2>Graduate Engineer Trainee</h2>
-						<span class="position">Larsen & Toubro Infotech</span>
-						<p class="mt-4">Tasks involving cleaning and refining data, setting up data streaming using
-							Kafka
-							and connecting it to S3, creating visual data displays with Tableau, and maintaining written
-							records and documentation.</p>
-					</div>
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2015-2017</span>
-						<h2>Maharashtra State Board Of Secondary & Higher Secondary Education (HSC - XII)</h2>
-						<span class="position">Royal Junior College</span>
-						<p class="mt-4">Grade: 80%</p>
-					</div>
-				</div>
-
-				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2021-2022</span>
 						<h2>Data Engineer</h2>
@@ -208,20 +180,29 @@
 							flattened data into JSON format and contributed to building an AWS Step Functions pipeline
 							for triggering Informatica (BDM) workflows. Integrated the JSON-Hive Spark utility into
 							existing pipeline and identified an optimization approach for EMR Cluster utilization based
-							on
-							the size of incoming JSON files landing on AWS S3 Bucket.</p>
+							on the size of incoming JSON files landing on AWS S3 Bucket.</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">2022-2024</span>
+						<h2>Data Engineer</h2>
+						<span class="position">LTIMindtree</span>
+						<p class="mt-4">Made significant contributions to a successful Proof of Concept (POC) that
+							involved transitioning ETL framework from AWS EMR and Informatica to AWS Glue. My roles
+							included setting up the AWS Glue environment, designing an end-to-end job pipeline,
+							addressing data challenges, and developing CI/CD code. Also provided training,
+							collaborated on test automation, and played a key role in converting test suites from Pandas
+							to PySpark. Additionally, helped to implement a unified HTML Test Automation report and
+							concluded the POC by migrating Test-Automation Suite to an AWS EMR cluster.</p>
 					</div>
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2017-2021</span>
-						<h2>Bachelor of Engineering in Electronics & Telecommunication</h2>
-						<span class="position">SIES Graduate School Of Technology</span>
-						<p class="mt-4">CGPA: 9.24/10</p>
-					</div>
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2005-2015</span>
-						<h2>Council For The Indian School Certificate Examinations (SSC - X)</h2>
-						<span class="position">Guardian High School</span>
-						<p class="mt-4">Grade: 90%</p>
+						<span class="date">2021</span>
+						<h2>Graduate Engineer Trainee</h2>
+						<span class="position">Larsen & Toubro Infotech</span>
+						<p class="mt-4">Tasks involving cleaning and refining data, setting up data streaming using
+							Kafka and connecting it to S3, creating visual data displays with Tableau, and maintaining written
+							records and documentation.</p>
 					</div>
 				</div>
 			</div>
@@ -274,7 +255,7 @@
 					<div class="progress-wrap ftco-animate">
 						<h3>PySpark</h3>
 						<div class="progress">
-							<div class="progress-bar color-4" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+							<div class="progress-bar color-3" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 								aria-valuemax="100" style="width:80%">
 								<span>80%</span>
 							</div>
@@ -283,22 +264,44 @@
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>Hive</h3>
+						<h3>Apache Kafka</h3>
 						<div class="progress">
-							<div class="progress-bar color-5" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-								aria-valuemax="100" style="width:75%">
-								<span>75%</span>
+							<div class="progress-bar color-4" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+								aria-valuemax="100" style="width:70%">
+								<span>70%</span>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>Kafka</h3>
+						<h3>Apache Flink</h3>
 						<div class="progress">
-							<div class="progress-bar color-6" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+							<div class="progress-bar color-4" role="progressbar" aria-valuenow="70" aria-valuemin="0"
 								aria-valuemax="100" style="width:70%">
 								<span>70%</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>Apache Hudi</h3>
+						<div class="progress">
+							<div class="progress-bar color-4" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+								aria-valuemax="100" style="width:70%">
+								<span>70%</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>Apache Airflow</h3>
+						<div class="progress">
+							<div class="progress-bar color-3" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+								aria-valuemax="100" style="width:75%">
+								<span>75%</span>
 							</div>
 						</div>
 					</div>
@@ -417,6 +420,36 @@
 				</div>
 			</div>
 			<div class="row">
+				<div class="col-md-4 text-center d-flex ftco-animate">
+					<a class="services-1">
+						<div class="desc">
+							<h3 class="mb-5">Experian Role Model for March'25</h3>
+							<h5 class="mb-5">Experian</h5>
+							<p class="mb-5">Received special recognition at the Townhall for my contributions to one of the key revenue products, "Premier Trended 
+								Attributes"</p>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-4 text-center d-flex ftco-animate">
+					<a class="services-1">
+						<div class="desc">
+							<h3 class="mb-5">FY25Q3 Hackathon - Best Tech Idea</h3>
+							<h5 class="mb-5">Experian</h5>
+							<p class="mb-5">My team, Krypton (Kr), from the PRODuct EngineerinG - PRODiG division, won the prestigious Best Tech Idea track at Experian's 
+								FY25 Q3 EMAP (EMEA + APAC) Hackathon!</p>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-4 text-center d-flex ftco-animate">
+					<a class="services-1">
+						<div class="desc">
+							<h3 class="mb-5">Experian Role Model for August'24</h3>
+							<h5 class="mb-5">Experian</h5>
+							<p class="mb-5">Our "iVAPS Technology" team was recognized under the category - "Products Addressing Market Needs - Data & Operations
+								Excellence!" in the August'24 Town Hall</p>
+						</div>
+					</a>
+				</div>
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a class="services-1">
 						<div class="desc">
@@ -573,9 +606,8 @@
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Contact</h1>
 					<h2 class="mb-4">Contact Me</h2>
-					<p>If you are in need of a highly experienced Big Data and AWS professional to take your data
-						initiatives to the next level, feel free to reach out. I would love to discuss how I can bring
-						my expertise to your organization and drive positive results.</p>
+					<p>If you are in need of a highly experienced data engineering professional to enhance your data infrastructure and drive impactful business outcomes,
+					   feel free to reach out. Let's discuss how I can bring value to your organization with cutting-edge data solutions.</p>
 				</div>
 			</div>
 
@@ -595,7 +627,7 @@
 							<span class="icon-phone2"></span>
 						</div>
 						<h3 class="mb-4">Contact Number</h3>
-						<p><a href="tel:+917506099306">+91 7506099306</a></p>
+						<p><a href="tel:+91 7506099306">+91 7506099306</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -663,7 +695,7 @@
 									target="_blank"><span class="icon-linkedin"></span></a></li>
 							<li class="ftco-animate"><a href="https://github.com/NamitNaik" target="_blank"><span
 										class="icon-github"></span></a></li>
-							<li class="ftco-animate"><a href="https://twitter.com/NamitNaik23" target="_blank"><span
+							<li class="ftco-animate"><a href="https://x.com/NamitNaik23" target="_blank"><span
 										class="icon-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="https://www.facebook.com/namit.naik.79"
 									target="_blank"><span class="icon-facebook"></span></a></li>
